# vulkan-project

./: CMakeLists.txt
shaders/: tri_mesh.vert  triangle.vert  triangle.vert.spv  triangle2.frag  triangle2.vert  triangle2.vert.spv
src/: CMakeLists.txt  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_types.h
